@@ -260,7 +260,9 @@ if [ X"${KERNEL_NAME}" == X'LINUX' ]; then
         fi
 
         # Get distribution name as DISTRO_CODENAME
-        if [ -e /etc/centos-release ]; then
+        if [ -e /etc/rocky-release ]; then
+            export DISTRO_CODENAME='rocky'
+        elif [ -e /etc/centos-release ]; then
             if grep -i 'CentOS Stream release' /etc/centos-release &>/dev/null; then
                 export DISTRO_CODENAME='stream'
             else
