@@ -71,6 +71,11 @@ elif [ X"${DISTRO}" == X'FREEBSD' ]; then
 
 elif [ X"${DISTRO}" == X'OPENBSD' ]; then
     export OB_PHP_VERSION='7.4'
+
+    if [ X"${DISTRO_VERSION}" == X'6.9' ]; then
+        export OB_PHP_VERSION='8.0'
+    fi
+
     export PHP_FPM_RC_SCRIPT_NAME='php74_fpm'
 
     export PHP_BIN="/usr/local/bin/php-${OB_PHP_VERSION}"
